Them thong bao khi giao task cho nguoi dung trong project

--- a/TaskManager.Web/appsettings.json
+++ b/TaskManager.Web/appsettings.json
@@ -27,6 +27,7 @@
     "UseStartTls": true,
     "User": "lapl6407@gmail.com",
     "Password": "gacjaoldatyfjswl",
-    "From": "TaskManager <lapl6407@gmail.com>"
+    //"From": "TaskManager <lapl6407@gmail.com>"
+    "FromName": "TaskManager"
   }
 }
